# python-sdk

./: README.md  pyproject.toml
examples/: apie.mcp.json  guardrail_packs_smoke.py  incident_remediation_agent.py  langchain_instrumented_agent.py  mcp_proxy_stdio.sh  multi_agent_pipeline.py  openai_agents_instrumented.py  production_release_gate_loop.py
src/apie/: __init__.py  apie.py  capabilities.py  cli.py  client.py  config.py  context.py  errors.py  events.py  guard.py  http.py  omit.py  queue.py  registration.py  reports.py  runs.py  sessions.py  types.py  wire.py
src/apie/integrations/: __init__.py  autogen.py  crewai.py  http.py  langchain_callback.py  langgraph.py  llamaindex.py  llm_tool_call.py  mcp.py  mcp_client.py  openai_agents.py  openai_agents_hooks.py  platform_connectors.py  vercel_ai.py  workflow.py
src/apie/mcp_core/: __init__.py  client.py  config.py  inference.py  payload.py  redact.py
src/apie/mcp_proxy/: __init__.py  interceptor.py  sse.py  stdio.py
src/apie/resources/: __init__.py  health.py
tests/: test_apie.py  test_cli.py  test_config.py  test_events.py  test_exports.py  test_guard.py  test_http_client.py  test_integrations.py  test_mcp_core.py  test_mcp_proxy.py  test_queue.py  test_send_test_event.py
