[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "apie-sdk"
version = "0.1.0"
description = "Official Python SDK for the Apie API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Apie" },
]
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
mcp-proxy = ["mcp>=1.0.0"]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
apie = "apie.cli:main"

[project.urls]
Homepage = "https://apie.sh"
Documentation = "https://docs.apie.sh"
Repository = "https://github.com/apie-sh/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/apie"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
